--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=update
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
+
+#JWT Secret
+jwt.secret = DuJUfjhuzXqGQJZhvjdQLiSmEUfY2QHCkh3Nc8zW
